# uaudio_flutter_plugin

./: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/kotlin/com/unotes/uaudio/: AudioFocusHandler.kt  UAudioPlugin.kt
lib/: uaudio.dart
lib/src/: bindings.dart  metadata.dart  playback.dart
src/: CMakeLists.txt
src/metadata/: ffmpeg_metadata.c  ffmpeg_metadata.h
src/playback/: ffmpeg_decoder.c  ffmpeg_decoder.h  opensl_playback.c  opensl_playback.h  playback_jni.c  uaudio_jni.h
